# renamer

./: .editorconfig  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
src/renamer/: __init__.py  log.py
src/renamer/cli/: __main__.py
