[build-system]
requires = ["poetry-core>=1.3.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"


[tool.poetry]
name = "renamer"
version = "0.1.0"
description = "Batch rename files, similar to what IrfanView does"
authors = ["Warner Leijenaar <git@renraw.nl>"]
license = "MIT"
readme = "README.md"
# packages = [
#   {include = "src"},
#   # {include = "renamer/py.typed", from = "src"},
# ]


[tool.poetry.urls]
"Homepage" = "https://github.com/renraw-nl/renamer"


[tool.poetry.scripts]
renamer = 'renamer.cli.__main__:main'


[tool.poetry.dependencies]
python = ">=3.12,<3.14"
argh = "^0.31.0"
filelock = "^3.13.1"
mawk = "^0.1.4"
result = "^0.16.0"
rich = "^13.7.0"
rich-argparse = "^1.4.0"
pendulum = "^3.0.0"


[tool.poetry.group.dev.dependencies]
interrogate = "^1.5.0"
pre-commit = "^3.6.0"
ruff = "^0.1.11"


[tool.poetry.group.test.dependencies]
hypothesis = "^6.92.2"
pytest = "^7.4.4"
pytest-mock = "^3.12.0"


[tool.poetry.group.docs.dependencies]
mkdocs = "^1.5.3"
pymarkdownlnt = "^0.9.15"


[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"


[tool.pytest.ini_options]
# asyncio_mode = "auto"
# addopts = "--no-cov-on-fail --showlocals --strict-markers"
addopts = "--showlocals --strict-markers"
testpaths = ["tests"]
norecursedirs = "_build var* .*cache .vscode .venv"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "utils",
]


[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = true
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 80
exclude = ["docs", "build", ".venv", "var", ".*_cache"]
ignore-regex = ["^get$", "^mock_.*", ".*BaseClass.*"]
verbose = 0
quiet = false
whitelist-regex = []
color = true
# generate-badge = "."
# badge-format = "svg"


[tool.ruff]
select = ["E", "F"]
ignore = []
line-length = 79
target-version = "py312"

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

# Note: Ruff supports a top-level `src` option in lieu of isort's `src_paths` setting.
src = ["src", "tests"]

# Allow autofix for all enabled rules (when `--fix`) is provided.
fixable = ["A", "B", "C", "D", "E", "F", "G", "I", "N", "Q", "S", "T", "W", "ANN", "ARG", "BLE", "COM", "DJ", "DTZ", "EM", "ERA", "EXE", "FBT", "ICN", "INP", "ISC", "NPY", "PD", "PGH", "PIE", "PL", "PT", "PTH", "PYI", "RET", "RSE", "RUF", "SIM", "SLF", "TCH", "TID", "TRY", "UP", "YTT"]
unfixable = []

# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".idea",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pytype",
    ".pytest_cache",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".vscode",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "var",
    "venv",
]


[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 70

[tool.ruff.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.ruff.lint]
select = [
    # Pyflakes
    "F",
    # Pycodestyle
    "E",
    "W",
    # isort
    "I001"
]

# [tool.ruff.lint.isort]
# known-first-party = ["my_module1", "my_module2"]

[tool.ruff.lint.pydocstyle]
convention = "google"  # Accepts: "google", "numpy", or "pep257".


# pymarkdownlnt configuration (yes both are correct
# ref. https://github.com/jackdewinter/pymarkdown/blob/main/docs/advanced_configuration.md#alternate-project-configuration-files
[tool.pymarkdown]
log = {level = "WARNING", stack-trace = false}

[tool.pymarkdown.extensions]
markdown-disallow-raw-html = {enabled = true}
front-matter = {enabled = true}
# markdown-task-list-items = {enabled = true}

[tool.pymarkdown.plugins]
# Enabled rules, with some configuration
emphasis-style = {enabled = true, style = "underscore"}
heading-style = {enabled = true, style = "atx"}
ul-indent = {enabled = true, indent = 4}

# disabled rules
code-block-style = {enabled = false}
fenced-code-language = {enabled = false}
line-length = {enabled = false}
no-blanks-blockquote = {enabled = false}
no-duplicate-header = {enabled = false}
ol-prefix = {enabled = false}
single-h1 = {enabled = false}
